--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Tektur:wght@400..900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Tektur:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- awaesom -->
     <link
       rel="stylesheet"
